--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,7 @@ h1 span, h2 span, h3 span { font-style: italic; font-size: 75%; }
 a:visited { text-decoration: none; }
 a:hover { color: #555; transition: color 0.5s; }
 ul { padding: 0; list-style-type: none; }
+.navbar-nav > li > a { font-variant: small-caps; }
 
 .block { padding: 0 10px 5px; }
 .text-block { padding: 0 10px; text-align: justify; max-width: 760px; margin: 0 auto; }
@@ -22,7 +23,6 @@ img.responsive { display: inline-block; max-width: 100%; height: auto; }
 .page-home .main-img-holder span { display: block; padding: 5px 15px; }
 .page-bio .picture-holder { margin: 10px 0; text-align: center; }
 .page-projects ul > li { text-align: center; }
-.page-projects ul > li:not(:first-child) { margin-top: 15px; }
 .page-projects ul > li img { max-height: 320px; transition: opacity .4s ease; -webkit-transform: translateZ(0); /* Chrome bug */ }
 /* .page-projects ul > li span:before { display: table; content: " "; height: 1px; } */
 .page-projects ul > li span { display: block; padding: 3px; }
@@ -59,6 +59,7 @@ img.responsive { display: inline-block; max-width: 100%; height: auto; }
 	img.responsive { margin: 0 auto; }
 
 	.page-home .main-img-holder { margin: 0px 20px 10px; }
+	.page-projects ul > li:not(:first-child) { margin-top: 15px; }
 	.page-view-project ul.thumbs-group li { text-align: center; }
 	.page-view-project ul.thumbs-group li a img { width: 100%; }
 	.page-view-project-image .image-holder .img-nav { opacity: 0.8; }
@@ -71,7 +72,7 @@ img.responsive { display: inline-block; max-width: 100%; height: auto; }
 @media (min-width: 768px)
 {
   .navbar-header, .navbar-brand, .navbar-text { float: none; text-align: center; }
-  .navbar-text { display: inline-block; padding: 3px 20px; _border-bottom: 1px solid #000; font-size: 130%; letter-spacing: 1px; font-weight: bold; text-transform: uppercase; }
+  .navbar-text { display: inline-block; padding: 3px 20px; font-size: 130%; letter-spacing: 1px; font-weight: bold; text-transform: uppercase; }
   .navbar-collapse.collapse { text-align: center; }
   .navbar-nav { float: none; margin: 0 auto; display: inline-block; border-top: 1px solid #000; border-bottom: 1px solid #000; }
 	.navbar-nav > li { float: none; display: inline-block; margin-left: -2px; margin-right: -2px; }
@@ -81,7 +82,9 @@ img.responsive { display: inline-block; max-width: 100%; height: auto; }
 	.alert strong { display: block; }
 
 	.page-home .main-img-holder { margin: 20px; }
-	.page-projects ul > li img { opacity: 0.8; }
+	.page-projects ul > li { float: left; }
+	.page-projects ul > li a { margin: 10px; }
+	.page-projects ul > li img { height: 250px; opacity: 0.8; }
 	.page-projects ul > li img:hover { opacity: 1; }
 	.page-view-project ul.thumbs-group:after { display: block; content: " "; clear: both; }
 	.page-view-project ul.thumbs-group li { float: left; }
