Projects re-organization

--- a/assets/views/statement.html
+++ b/assets/views/statement.html
@@ -1,19 +1,20 @@
 <div class="page-statement">
 	<div class="text-block">
-		<p>I organize my thoughts and feelings through the art-making process.
-			I am interested in reviving the experience of childhood through my process, recreating feelings of freedom
-			and giving myself permission to dream. My point of departure is my personal history and inner monologue,
-			and all of the emotions that come with these memories and thoughts.
-			My work is about the pull of my inner child at the same time as it is about my adult experience of existing
-			in a competitive, dynamic world.</p>
-		<p>My paintings express a fantasy in which we are free to be chaotic and impulsive without consequence.
-			They are a visual combination of structure that is predictable and creates an illusion of security,
-			and natural and animal forces that are chaotic, unpredictable, surprising, and tempting.</p>
-		<p><i>Identity Spheres</i> is a visual collection of thoughts that occupy my mind at this moment in my life,
-			as well as representations of cultural knowledge that I draw upon as I make decisions in my daily life.
-			This body of work emerges from a place of inner conflict about cultural identity
-			and documents the feeling of being pulled by opposing cultural forces.
-			At the same time, it represents the fulfillment of a place where seemingly conflicting sets of cultural knowledge
-			come together harmoniously.</p>
+		<p>
+			I organize my thoughts and feelings through the art-making process.
+			I am interested in reviving the experience of childhood through my process, recreating feelings of freedom and giving myself permission to dream.
+			My point of departure is my personal history and inner monologue, and all of the emotions that come with these memories and thoughts.
+			My work is about the pull of my inner child at the same time as it is about my adult experience of existing in a competitive, dynamic world.
+		</p>
+		<p>
+			<i>Equilibrium</i> is about my various cultural identities.
+			The balancing spheres are planets of cultural knowledge that exist together simultaneously and harmoniously.
+			There is wisdom and beauty in all of my experiences and cultural knowledges.
+		</p>
+		<p>
+			My paintings are about freedom and hope.
+			They are a visual combination of structure that is predictable and secure, and natural forces that are unpredictable and novel.
+			Recreating images of natural beauty in a spontaneous and authentic way builds my faith and confidence in an order that will regulate itself and always return to equilibrium.
+		</p>
 	</div>
 </div>
