New Still Lifes paintings

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,7 @@ html { min-height: 100%; position: relative; margin: 0; }
 body { margin: 0; _font-family: Tahoma; }
 .no-wrap { white-space: nowrap; }
 a, h1, h2, h3, .color, .navbar .navbar-brand, .navbar-nav>li a { color: #000; }
+.navbar-brand { padding-right: 0; }
 h1 { font-size: 32px; border-bottom: 1px solid #43853D; padding-bottom: 3px; margin-left: 10px; margin-right: 10px; }
 h2 { font-size: 26px; padding-left: 5px; }
 h3 { font-size: 21px; padding-left: 5px; }
@@ -53,7 +54,7 @@ img.responsive { display: inline-block; max-width: 100%; height: auto; }
   .navbar-toggle .icon-bar { height: 4px; background-color: #000; transition: background-color 1s ease; }
   .navbar-toggle:hover .icon-bar { background-color: #444; }
 
-	.navbar-text { font-size: 36px; text-transform: uppercase; }
+	.navbar-text { font-size: 36px; text-transform: uppercase; margin-top: 4px; display: inline-block; }
 	.navbar-nav { font-size: 120%; }
 
 	img.responsive { margin: 0 auto; }
