Rework of Bio and Statement

--- a/assets/views/statement.html
+++ b/assets/views/statement.html
@@ -1,20 +1,16 @@
 <div class="page-statement">
 	<div class="text-block">
 		<p>
-			I organize my thoughts and feelings through the art-making process.
-			I am interested in reviving the experience of childhood through my process, recreating feelings of freedom and giving myself permission to dream.
-			My point of departure is my personal history and inner monologue, and all of the emotions that come with these memories and thoughts.
-			My work is about the pull of my inner child at the same time as it is about my adult experience of existing in a competitive, dynamic world.
+			My work is about capturing gratitude and wonder for nature and augmenting the viewer’s experience of the natural environment.
+			I see my images as contributing to a collective and historical body of work that depicts and directs attention to nature at a time of rapid technological progress. I draw inspiration from a natural landscape that is slipping away from us and create my images with spontaneous wonder for subjects and scenes that are saturated with detail and mystique.
+			My work asks the viewer to notice and appreciate natural subjects while viewing them through a modern, human-made lens.
 		</p>
 		<p>
-			<i>Equilibrium</i> is about my various cultural identities.
-			The balancing spheres are planets of cultural knowledge that exist together simultaneously and harmoniously.
-			There is wisdom and beauty in all of my experiences and cultural knowledges.
-		</p>
-		<p>
-			My paintings are about freedom and hope.
-			They are a visual combination of structure that is predictable and secure, and natural forces that are unpredictable and novel.
-			Recreating images of natural beauty in a spontaneous and authentic way builds my faith and confidence in an order that will regulate itself and always return to equilibrium.
+			In my artistic method I seek to preserve and document in order to relive and contemplate our relationship with nature.
+			My creative process and color palette are contemporary and at times experimental.
+			The subjects in my images are more saturated and visually splendid than they present in reality.
+			I take comfort in the freedom to paint spontaneously and intuitively while preserving the intensity of the colors of my medium and my subjects.
+			In a digital age of clean edges and augmented reality, my work remains material and textured in order to coax viewers into more fully experiencing their environments the way they materially are.
 		</p>
 	</div>
 </div>
