Updating artist statement

--- a/assets/views/statement.html
+++ b/assets/views/statement.html
@@ -2,15 +2,15 @@
 	<div class="text-block">
 		<p>
 			My work is about capturing gratitude and wonder for nature and augmenting the viewer’s experience of the natural environment.
-			I see my images as contributing to a collective and historical body of work that depicts and directs attention to nature at a time of rapid technological progress. I draw inspiration from a natural landscape that is slipping away from us and create my images with spontaneous wonder for subjects and scenes that are saturated with detail and mystique.
+			I see my images as contributing to a collective and historical body of work that depicts and directs attention to nature at a time of rapid technological progress.
+			I draw inspiration from the natural world and create my images with spontaneous wonder for my subjects and scenes.
 			My work asks the viewer to notice and appreciate natural subjects while viewing them through a modern, human-made lens.
 		</p>
 		<p>
-			In my artistic method I seek to preserve and document in order to relive and contemplate our relationship with nature.
+			In my artistic method I seek to preserve and document in order to more fully relive and contemplate our relationship with nature.
 			My creative process and color palette are contemporary and at times experimental.
-			The subjects in my images are more saturated and visually splendid than they present in reality.
-			I take comfort in the freedom to paint spontaneously and intuitively while preserving the intensity of the colors of my medium and my subjects.
-			In a digital age of clean edges and augmented reality, my work remains material and textured in order to coax viewers into more fully experiencing their environments the way they materially are.
+			The subjects in my images are brighter in color than they present in reality.
+			I take comfort in the freedom to paint spontaneously and intuitively while preserving the intensity of the colors and spirit of my medium and subjects.
 		</p>
 	</div>
 </div>
