--- a/assets/views/statement.html
+++ b/assets/views/statement.html
@@ -1,16 +1,9 @@
 <div class="page-statement">
 	<div class="text-block">
 		<p>
-			My work is about capturing gratitude and wonder for nature and augmenting the viewer’s experience of the natural environment.
-			I see my images as contributing to a collective and historical body of work that depicts and directs attention to nature at a time of rapid technological progress.
-			I draw inspiration from the natural world and create my images with spontaneous wonder for my subjects and scenes.
-			My work asks the viewer to notice and appreciate natural subjects while viewing them through a modern, human-made lens.
-		</p>
-		<p>
-			In my artistic method I seek to preserve and document in order to more fully relive and contemplate our relationship with nature.
-			My creative process and color palette are contemporary and at times experimental.
-			The subjects in my images are brighter in color than they present in reality.
-			I take comfort in the freedom to paint spontaneously and intuitively while preserving the intensity of the colors and spirit of my medium and subjects.
+			My work is about engaging with the colors and textures of the environment in order to draw attention to its mysteries and heal our spirits.
+			It draws from a folk tradition of gratitude for the beauty of the natural environment and the use of simple materials to create art objects.
+			It is a way of listening to and responding to my environment and learning from what I experience in my interactions with nature.
 		</p>
 	</div>
 </div>
