Updating artist statement

--- a/assets/views/statement.html
+++ b/assets/views/statement.html
@@ -1,9 +1,9 @@
 <div class="page-statement">
 	<div class="text-block">
 		<p>
-			My work is about engaging with the colors and textures of the environment in order to draw attention to its mysteries and heal our spirits.
-			It draws from a folk tradition of gratitude for the beauty of the natural environment and the use of simple materials to create art objects.
-			It is a way of listening to and responding to my environment and learning from what I experience in my interactions with nature.
+			My work is about engaging with the colors and textures of the natural environment in order to draw attention to its mysteries and heal our spirits.
+      It draws from a tradition of art-making inspired by gratitude for the natural environment. I use simple materials and methods to explore and express what I feel and think in each moment.
+      It is a way of listening to and responding to my surroundings and learning from what I experience in my interactions with people and nature.
 		</p>
 	</div>
 </div>
