Re-updating the artist statement

--- a/assets/views/statement.html
+++ b/assets/views/statement.html
@@ -1,9 +1,10 @@
 <div class="page-statement">
 	<div class="text-block">
 		<p>
-			My work is about engaging with the colors and textures of the natural environment in order to draw attention to its mysteries and heal our spirits.
-      It draws from a tradition of art-making inspired by gratitude for the natural environment. I use simple materials and methods to explore and express what I feel and think in each moment.
-      It is a way of listening to and responding to my surroundings and learning from what I experience in my interactions with people and nature.
+			My work is about embracing feelings of difference, marginalization, brokenness, and imperfection.
+      It draws from a tradition of art-making inspired by gratitude for the expansiveness and mysteries of the natural environment.
+      I express what I think and feel in each moment through the experimental interaction of colors, lines, shapes, and textures.
+      I am interested in transparency and opacity, absence and presence, the creation of depth through layering, and the expression of complex thoughts and feelings using simple materials and methods.
 		</p>
 	</div>
 </div>
